src/icons/Icon.scss
.seeds-icon {
  --icon-scale-factor: 1.1;

  --icon-sm: 0.75rem;
  --icon-sm-alignment: -0.05rem;
  --icon-md: 1rem;
  --icon-md-alignment: -0.125rem;
  --icon-lg: 1.5rem;
  --icon-lg-alignment: -0.5rem;
  --icon-xl: 2.5rem;
  --icon-xl-alignment: -0.75rem;
  --icon-2xl: 3rem;
  --icon-2xl-alignment: -1rem;
  --icon-height: 1em;
  --icon-alignment: -0.15em;

  display: inline-block;
  vertical-align: var(--icon-alignment);
  height: calc(var(--icon-height) * var(--icon-scale-factor));

  &[data-size="sm"] {
    --icon-height: var(--icon-sm);
    --icon-alignment: var(--icon-sm-alignment);
  }

  &[data-size="md"] {
    --icon-height: var(--icon-md);
    --icon-alignment: var(--icon-md-alignment);
  }

  &[data-size="lg"] {
    --icon-height: var(--icon-lg);
    --icon-alignment: var(--icon-lg-alignment);
  }

  &[data-size="xl"] {
    --icon-height: var(--icon-xl);
    --icon-alignment: var(--icon-xl-alignment);
  }

  &[data-size="2xl"] {
    --icon-height: var(--icon-2xl);
    --icon-alignment: var(--icon-2xl-alignment);
  }
}

.seeds-icon svg {
  display: block;
  height: 100%;
  aspect-ratio: 1 / 1;
}

.seeds-icon:not([data-outlined]) svg {
  fill: currentColor;
}

.seeds-icon[data-outlined] svg {
  stroke: currentColor;
}

